--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,34 +1,10 @@
-
-    <!-- Start Content -->
+<!-- Start Content -->
     <div class="container py-5">
         <div class="row">
           <%= render "layouts/category" %>
 
             <div class="col-lg-9">
-                <div class="row">
-                    <div class="col-md-6">
-                        <ul class="list-inline shop-top-menu pb-3 pt-1">
-                            <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#"><%= t("store.all") %></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#"><%= t("store.men") %></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none" href="#"><%= t("store.women") %></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 pb-4">
-                        <div class="d-flex">
-                            <select class="form-control">
-                                <option><%= t("store.az") %></option>
-                                <option><%= t("store.price") %></option>
-                                <option><%= t("store.item") %></option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+                <%= render "sort" %>
                 <div class="row">
                   <%= render "item" %>
                 </div>
@@ -40,6 +16,5 @@
                     </ul>
                 </div>
             </div>
-
         </div>
     </div>
