--- a/app/views/stores/_item.html.erb
+++ b/app/views/stores/_item.html.erb
@@ -1,18 +1,23 @@
 <% @products.each do |product| %>
-<div class="col-md-4">
+  <div class="col-md-4">
     <div class="card mb-4 product-wap rounded-0">
         <div class="card rounded-0">
-          <%= image_tag product.display_image if product.image.attached? %>
+          <%= image_tag display_image(product), class: "card-img rounded-0 img-fluid" %>
             <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                 <ul class="list-unstyled">
-                    <li><a class="btn btn-success text-white" href="shop-single.html"><i class="far fa-heart"></i></a></li>
-                    <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="far fa-eye"></i></a></li>
+                    <li>
+                      <%= link_to detail_path(id: product.id),class: "btn btn-success text-white" do %>
+                      <i class="far fa-eye"></i>
+                      <% end %>
+                    </li>
+                    <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="far fa-heart"></i></a></li>
                     <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="fas fa-cart-plus"></i></a></li>
                 </ul>
             </div>
         </div>
         <div class="card-body">
-            <a href="shop-single.html" class="h3 text-decoration-none"><%= product.name %></a>
+          <%= link_to product.name ,detail_path(id: product.id),class: "h3 text-decoration-none"%>
+
             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                 <li><%= t("store.size") %> <%= product.size %></li>
                 <li class="pt-2">
@@ -33,7 +38,8 @@
                 </li>
             </ul>
             <p class="text-center mb-0">$<%= product.price %></p>
+
         </div>
     </div>
-</div>
+  </div>
 <% end %>
