--- a/app/views/stores/_item.html.erb
+++ b/app/views/stores/_item.html.erb
@@ -14,7 +14,7 @@
         <div class="card-body">
             <a href="shop-single.html" class="h3 text-decoration-none"><%= product.name %></a>
             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
-                <li>Size: <%= product.size %></li>
+                <li><%= t("store.size") %> <%= product.size %></li>
                 <li class="pt-2">
                     <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
                     <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
