--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -9,22 +9,22 @@
                     <div class="col-md-6">
                         <ul class="list-inline shop-top-menu pb-3 pt-1">
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#">All</a>
+                                <a class="h3 text-dark text-decoration-none mr-3" href="#"><%= t("store.all") %></a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#">Men's</a>
+                                <a class="h3 text-dark text-decoration-none mr-3" href="#"><%= t("store.men") %></a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
+                                <a class="h3 text-dark text-decoration-none" href="#"><%= t("store.women") %></a>
                             </li>
                         </ul>
                     </div>
                     <div class="col-md-6 pb-4">
                         <div class="d-flex">
                             <select class="form-control">
-                                <option>A -> Z</option>
-                                <option>Price</option>
-                                <option>Item</option>
+                                <option><%= t("store.az") %></option>
+                                <option><%= t("store.price") %></option>
+                                <option><%= t("store.item") %></option>
                             </select>
                         </div>
                     </div>
