--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       <div class="flex-fill">
         <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"><%= t("store.home") %></a>
+            <%= link_to t("store.home"), root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html"><%= t("store.about") %></a>
@@ -35,10 +35,10 @@
         <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
           <i class="fa fa-fw fa-search text-dark mr-2"></i>
         </a>
-        <a class="nav-icon position-relative text-decoration-none" href="#">
+        <%= link_to carts_path, class: "nav-icon position-relative text-decoration-none" do %>
           <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-          <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
-        </a>
+          <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark" id="cart"><%= cart.count %></span>
+        <% end %>
         <a class="nav-icon position-relative text-decoration-none" href="#">
           <i class="fa fa-fw fa-user text-dark mr-3"></i>
           <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
