fix session cart

--- a/app/views/stores/detail.html.erb
+++ b/app/views/stores/detail.html.erb
@@ -82,7 +82,7 @@
               </div>
               <div class="row pb-3">
                 <div class="col d-grid">
-                    <%= link_to t("store.add_to_cart"), carts_path(:product_id => @product.id), class: "btn btn-block btn-success"%>
+                    <%= link_to t("store.add_to_cart"), carts_path(:product_id => @product.id, :quantity => 1), class: "btn btn-block btn-success"%>
                 </div>
                 <div class="col d-grid">
                   <button type="submit" class="btn btn-success btn-lg" name="submit" value="addtocard">Add To Cart</button>
