--- a/app/views/carts/_line_product.html.erb
+++ b/app/views/carts/_line_product.html.erb
@@ -1,18 +1,25 @@
 <% @products.each do |product| %>
 <tr>
-    <td>
-        <%= link_to detail_path(id: product.id) do %>
-        <%= image_tag product.display_image_on_cart, class: "card-img rounded-0 img-fluid" %>
-        <% end %>
-    </td>
-    <td><%= product.name %></td>
-    <td><%= product.discount %></td>
-    <td><%= number_field_tag t("cart.quantity"), quantity_item(product.id), min: 1, max: 10, step: 1 %></td>
-    <td class="text-right"><%= product.price %> €</td>
-    <td class="text-right">
-        <button class="btn btn-sm btn-danger">
-            <i class="fa fa-trash"></i>
-        </button>
-    </td>
+  <td>
+    <%= link_to detail_path(id: product.id) do %>
+      <%= image_tag product.display_image_on_cart, class: "card-img rounded-0 img-fluid" %>
+    <% end %>
+  </td>
+  <td><%= product.name %></td>
+  <td><%= product.discount %></td>
+  <td class="text-right"><%= product.price %> €</td>
+  <%= form_with url: update_cart_path, method: :get do |f| %>
+  <td>
+    <%= f.number_field :quantity, value: quantity_item(product.id), min: 1, max: 10, step: 1 %>
+      <%= f.hidden_field :product_id, value: product.id %>
+      <%= f.submit t("cart.update"), class: "btn btn-block btn-success"%>
+  </td>
+  <% end %>
+  <td class="text-right">
+    <button class="btn btn-sm btn-danger">
+      <i class="fa fa-trash"></i>
+    </button>
+  </td>
+  <td class="text-right"><%= sub_total(product) %> €</td>
 </tr>
 <% end %>
