--- a/app/views/carts/_line_product.html.erb
+++ b/app/views/carts/_line_product.html.erb
@@ -11,14 +11,16 @@
   <%= form_with url: update_cart_path, method: :get do |f| %>
   <td>
     <%= f.number_field :quantity, value: quantity_item(product.id), min: 1, max: 10, step: 1 %>
-      <%= f.hidden_field :product_id, value: product.id %>
-      <%= f.submit t("cart.update"), class: "btn btn-block btn-success"%>
+    <%= f.hidden_field :product_id, value: product.id %>
+    <%= f.submit t("cart.update"), class: "btn btn-block btn-success"%>
   </td>
   <% end %>
   <td class="text-right">
-    <button class="btn btn-sm btn-danger">
+
+    <%= link_to destroy_item_path(product_id: product.id),class: "btn btn-sm btn-danger" do %>
       <i class="fa fa-trash"></i>
-    </button>
+      <% end %>
+
   </td>
   <td class="text-right"><%= sub_total(product) %> €</td>
 </tr>
