--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,17 +10,23 @@
       <div class="flex-fill">
         <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
           <li class="nav-item">
-            <%= link_to t("store.home"), root_path, class: "nav-link" %>
+            <%= link_to t("store.shop"), root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html"><%= t("store.about") %></a>
           </li>
+          <% if login?  %>
           <li class="nav-item">
-            <a class="nav-link" href="shop.html"><%= t("store.shop") %></a>
+            <%= link_to t("logout"), logout_path, method: :delete, class: "nav-link" %>
+          </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to t("login.signup"), signup_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"><%= t("store.contact") %></a>
+            <%= link_to t("login.login"), login_path, class: "nav-link" %>
           </li>
+          <% end %>
         </ul>
       </div>
       <div class="navbar align-self-center d-flex">
