--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Start Content -->
 <div class="container py-5">
   <div class="row">
-    <%= render "layouts/category" %>
+    <%= render "category" %>
 
     <div class="col-lg-9">
       <%= render "sort" %>
