--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,19 +39,19 @@
 
             <%= form_tag(root_path, method: :get, class: "modal-content modal-body border-0 p-0" ) do %>
             <div class="input-group mb-2">
-            <%= text_field_tag :search, nil, class: "form-control", placeholder: "Search ..." %>
-            <i class="fa fa-fw fa-search text-white"></i>
+              <%= text_field_tag :search, nil, class: "form-control", placeholder: "Search ..." %>
+              <%= button_to t("store.search"), class: "input-group-text bg-success text-light" %>
+              <i class="fa fa-fw fa-search text-white"></i>
             </div>
           <% end %>
         </div>
       </div>
-
       <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
         <i class="fa fa-fw fa-search text-dark mr-2"></i>
       </a>
       <%= link_to carts_path, class: "nav-icon position-relative text-decoration-none" do %>
       <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-      <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark" id="cart"><%= cart.count %></span>
+      <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark" id="cart"><%= cart %></span>
     <% end %>
     <a class="nav-icon position-relative text-decoration-none" href="#">
       <i class="fa fa-fw fa-user text-dark mr-3"></i>
