--- a/app/views/orders/_line_product.html.erb
+++ b/app/views/orders/_line_product.html.erb
@@ -9,18 +9,8 @@
   <td><%= product.name %></td>
   <td><%= product.discount %> %</td>
   <td class="text-right"><%= product.price %> €</td>
-  <%= form_with url: update_cart_path, method: :get do |f| %>
-  <td>
-    <%= f.number_field :quantity, value: quantity_item(product.id), min: 1, max: 10, step: 1 %>
-
-    <%= f.hidden_field :product_id, value: product.id %>
-    <%= f.submit t("cart.update"), class: "btn btn-block btn-success"%>
-  </td>
-  <% end %>
+  <td><%= quantity_item(product.id) %>  </td>
   <td class="text-right">
-    <%= link_to destroy_item_path(product_id: product.id),class: "btn btn-sm btn-danger" do %>
-      <i class="fa fa-trash"></i>
-      <% end %>
   </td>
   <td class="text-right"><%= sub_total(product) %> €</td>
 </tr>
