--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,3 @@
-<h1><%= t("cart.carts") %></h1>
 <div class="container mb-4" id="cart-box">
   <div class="row">
     <div class="col-12">
@@ -53,18 +52,7 @@
           </tbody>
         </table>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="row">
-        <div class="col-sm-12  col-md-6 text-right">
-          <%= link_to t("cart.continue"), root_path, class: "btn btn-lg btn-block btn-warning text-uppercase" %>
-        </div>
-        <div class="col-sm-12 col-md-6 text-left">
-          <%= link_to t("order.checkout"), checkout , class: "btn btn-lg btn-block btn-success text-uppercase" %>
-        </div>
-      </div>
-    </div>
+      <%= render "form_info_shipping" %>
   </div>
+</div>
 </div>
