--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -4,3 +4,84 @@
 .search{
   float: left;
 }
+
+
+.item-comment-box {
+    clear: both;
+    margin: 20px 0px;
+    float: left;
+    width: 100%;
+}
+.item-comment-box h3 {
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+.comment-item {
+    margin-bottom: 30px;
+}
+.comment-item-left {
+    float: left;
+    width: 90px;
+    height: 90px;
+}
+.comment-item-left img {
+    width: 100%;
+    border-radius: 20px;
+}
+.comment-item-right {
+    padding-left: 110px;
+}
+.comment-item-right a {
+    font-size: 16px;
+    font-weight: 500;
+}
+.des-l {
+    display: inline-block;
+    width: 100%;
+}
+.des-l p {
+    font-size: 13px;
+}
+.comment-item-right a {
+    font-size: 16px;
+    font-weight: 500;
+}
+.right-btn-re {
+    float: right;
+    font-style: italic;
+    text-align: right;
+    font-size: 16px;
+    padding: 5px 10px;
+    background: #f5f5f5;
+    border-radius: 6px;
+}
+.right-btn-re:hover {
+    background: #d65106;
+    color: #ffffff !important;
+}
+.comment-respond-box {
+    clear: both;
+}
+.item-comment-box .children {
+    margin-left: 70px;
+}
+.comment-item {
+    margin-bottom: 30px;
+}
+.comment-item-right i {
+    padding-right: 10px;
+}
+
+.comment-form-respond input {
+    min-height: 38px;
+    border: 1px solid #010101;
+    border-radius: 0px;
+    padding: 10px;
+}
+.comment-form-respond textarea {
+    border: 1px solid #010101;
+    border-radius: 0px;
+    padding: 10px;
+    min-height: 110px;
+}
